cc: Fix bug in ClientPaintCache::Purge

ClientPaintCache::Purge was not modifying the map that it was generating
PurgeData from.  This meant that to generate a budget to remove, it
would loop over the same element repeatedly and generate a large list
of the same item to purge.  (This is why this is intermintent and hard
to repro.)  However, it would then inform the service that this one
entry was removed, but the client would still think it was there.
If anything used it at that point, the client would assume it was
cached, but the service would fail because it would not be cached.

Bug: 906510
Change-Id: I71bf22833649875ea2486f5e8518b897f354b6c1
Reviewed-on: https://chromium-review.googlesource.com/c/1345418
Reviewed-by: Khushal <khushalsagar@chromium.org>
Commit-Queue: enne <enne@chromium.org>
Cr-Commit-Position: refs/heads/master@{#609932}
Former-commit-id: 30a0cda62883f107740e2f332aa7a2c98bffff72